[package]
name = "baby-bottle-temperature-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-sns = "0.24.0"
dotenv = "0.15.0"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
