[package]
name = "baby-bottle-temperature-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.24"
dotenv = "0.15.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
twilio = "1.0.2"

[dev-dependencies]
cargo-tarpaulin = "0.25.2"
mockall = "0.11.4"
